# udacity-data-lake-s3-spark

./: .gitignore  README.md  etl.py  pyproject.toml
notebooks/: sparkify.ipynb
scripts/: add_emr_step.sh  copy_etl_script_to_s3.sh  copy_output_from_hdfs_to_s3.sh  example_s3_dist_cp.sh  launch_cluster.sh  ssh_to_cluster.sh
