[tool.poetry]
name = "udacity-data-lake-s3-spark"
version = "0.1.0"
description = ""
authors = ["Lui Pillmann <lui.pillmann@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "^3.1.2"

[tool.poetry.dev-dependencies]
ipython = "^7.24.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
